[package]
name = "tap-windows"
description = "tap-windows driver interface."
authors = ["Davide Mor <tazdevil971@gmail.com>"]
license = "MIT"

version = "0.1.1"
edition = "2018"

repository = "https://github.com/Tazdevil971/tap-windows"
keywords = ["tap", "tunnel", "bindings", "network"]
readme = "README.md"

[dependencies]
winreg = "0.7"
scopeguard = "1.1"

[dependencies.winapi]
version = "0.3"
features = [
    "errhandlingapi",
    "combaseapi",
    "ioapiset",
    "winioctl",
    "setupapi",
    "synchapi",
    "netioapi",
    "fileapi"
]
