[package]
name = "tap-windows"
description = "tap-windows driver interface."
authors = ["Davide Mor <tazdevil971@gmail.com>"]
license = "MIT"

version = "0.1.2"
edition = "2021"

repository = "https://github.com/Tazdevil971/tap-windows"
keywords = ["tap", "tunnel", "bindings", "network"]
readme = "README.md"

[dependencies]
c2rust-bitfields = "0.18"
log = "0.4"
scopeguard = "1.2"
windows = { version = "0.52", features = [
    "Win32_System_SystemInformation",
    "Win32_Networking_WinSock",
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_NetworkManagement_Ndis",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Storage_FileSystem",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_System_Registry",
    "Win32_System_Ioctl",
] }
winreg = "0.52"

[dev-dependencies]
ctrlc2 = { version = "3.5", features = ["termination"] }
dotenvy = "0.15"
env_logger = "0.10"

[package.metadata.docs.rs]
targets = [
    "x86_64-pc-windows-msvc",
    "i686-pc-windows-msvc",
    "aarch64-pc-windows-msvc",
]
